# binary-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
derive_test/: Cargo.toml
derive_test/src/: lib.rs
design/: DESIGN.md
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs
