[package]
name = "binary"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
bls12_381 = ["dep:bls12_381"]
derive = ["dep:binary_derive"]

[dependencies]
bls12_381 = { version = "0.8.0", optional = true }
binary_derive = { path = "../derive", optional = true }

[dev-dependencies]
rand = "0.8.5"
ff = { version = "0.13" }
group = { version = "0.13" }
