[package]
name = "binary"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
full = ["bls12_381", "curve25519-dalek", "blake3", "derive"]
bls12_381 = ["dep:bls12_381"]
curve25519-dalek = ["dep:curve25519-dalek"]
blake3 = ["dep:blake3"]
derive = ["dep:binary_derive"]

[dependencies]
bls12_381 = { version = "0.8.0", optional = true }
curve25519-dalek = { version = "4.1.3", features = ["rand_core"], optional = true }
binary_derive = { path = "../derive", optional = true }
blake3 = { version = "1.5.4", optional = true }

[dev-dependencies]
rand = "0.8.5"
ff = { version = "0.13" }
group = { version = "0.13" }
